force-app/main/default/objects/Payment_Request_Mock__c/Payment_Request_Mock__c.object-meta.xml
<CustomObject>
    <label>Payment Request (Downtime Record)</label>
    <nameField>
        <displayFormat>DPR-{0000000}</displayFormat>
        <label>Payment Request Mock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request (Downtime Records)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>