force-app/main/default/objects/Payment_Request_Mock__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENBD-CA-AED-SLLC-1014691785004</fullName>
            </value>
            <value>
                <fullName>PNCI-USD-AE49 0260 0010 2485 4250 002</fullName>
            </value>
            <value>
                <fullName>UNB-CA-AED-SLLC-014464193303</fullName>
            </value>
            <value>
                <fullName>UNB-ES-AED-SLLC-14464193484</fullName>
            </value>
            <value>
                <fullName>UNB-ES-AED-SLLC-014464193623</fullName>
            </value>
            <value>
                <fullName>UNB-ES-AED-SLLC-014464193009</fullName>
            </value>
            <value>
                <fullName>United Arab Bank-ALQUOZ-CORPORATE-CURRENT A/C-1034024947001</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic Bank-ARENCO - DIC BR-AED-Escrow-SOBHA HARTLAND GREENS - PHASE</fullName>
            </value>
            <value>
                <fullName>AM-ES-MAIN-AED-SLLC-CVR-994000001956</fullName>
            </value>
            <value>
                <fullName>ADCB-ES-MAIN-AED-SLLC-CV-11423450820001</fullName>
            </value>
            <value>
                <fullName>UAB-CA-AED-SLLC-1034024947001</fullName>
            </value>
            <value>
                <fullName>ADCB-ES-AED-SLLC-11423450820003</fullName>
            </value>
            <value>
                <fullName>ADCB-RT-AED-SLLC-11423450820004</fullName>
            </value>
            <value>
                <fullName>DIB–AED–ES–CV–Main A/c–SLLC - 001582194865001</fullName>
            </value>
            <value>
                <fullName>DIB–AED–ES–OPA–Main A/c–SLLC - 001582194866401</fullName>
            </value>
            <value>
                <fullName>DIB–AED–ES–CVR–Main A/c–SLLC - 001582194862601</fullName>
            </value>
            <value>
                <fullName>CBD-CA-AED-SLLC-1002472494</fullName>
            </value>
            <value>
                <fullName>MB-CA-AED-SLLC-019000034998</fullName>
            </value>
            <value>
                <fullName>FAB-CA-AED-SLLC-1031324613244001</fullName>
            </value>
            <value>
                <fullName>PNCI-CBD-CA-AED-PNCI-1002466736</fullName>
            </value>
            <value>
                <fullName>CBD-AED-ES-SHW-MainnA/c-SLLC</fullName>
            </value>
            <value>
                <fullName>Waves Grande - CBD - DIB - Escrow</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic Bank-Arenco - DIC Branch-AED-Current</fullName>
            </value>
            <value>
                <fullName>ADIB-ES-AED-SLLC-27467383</fullName>
            </value>
            <value>
                <fullName>ADIB-ES-AED-SLLC-27716157</fullName>
            </value>
            <value>
                <fullName>ADIB-ES-AED-SLLC-16640027</fullName>
            </value>
            <value>
                <fullName>ADIB-ES-AED-SLLC-28052098</fullName>
            </value>
            <value>
                <fullName>ADIB-ES-AED-SLLC-25407167</fullName>
            </value>
            <value>
                <fullName>ADIB-ES-AED-SLLC-25407170</fullName>
            </value>
            <value>
                <fullName>ADIB-ES-AED-SLLC-27467451</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>