force-app/main/default/objects/Payment_Request_Mock__c/fields/Amount_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Allocated</label>
    <type>Checkbox</type>
</CustomField>