force-app/main/default/objects/Payment_Request_Mock__c/fields/Approved_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_and_Time__c</fullName>
    <label>Approved Date and Time</label>
    <type>DateTime</type>
</CustomField>