force-app/main/default/objects/Payment_Request_Mock__c/fields/Booking_form_created_by__c.field-meta.xml
<CustomField>
    <fullName>Booking_form_created_by__c</fullName>
    <formula>New_Sale_Approval_Mock__r.Booking_Form_To_be_Created_By__r.FirstName &amp;&quot; &quot;&amp; New_Sale_Approval_Mock__r.Booking_Form_To_be_Created_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking form created by</label>
    <type>Text</type>
</CustomField>