force-app/main/default/objects/Payment_Request_Mock__c/fields/Cheque__c.field-meta.xml
<CustomField>
    <fullName>Cheque__c</fullName>
    <label>Cheque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>