force-app/main/default/objects/Payment_Request_Mock__c/fields/From_Booking__c.field-meta.xml
<CustomField>
    <fullName>From_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Booking</label>
    <type>Checkbox</type>
</CustomField>