force-app/main/default/objects/Payment_Request_Mock__c/fields/Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Date__c</fullName>
    <label>Instrument Date(</label>
    <type>Date</type>
</CustomField>