force-app/main/default/objects/Payment_Request_Mock__c/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <label>Lead Source – Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>