force-app/main/default/objects/Payment_Request_Mock__c/fields/New_Sale_Approval_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Approval_Created_Date__c</fullName>
    <formula>New_Sale_Approval_Mock__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Sale Approval Created Date</label>
    <type>DateTime</type>
</CustomField>