force-app/main/default/objects/Payment_Request_Mock__c/fields/Payment_Request_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request_Wrapper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Request Wrapper</label>
    <referenceTo>Payment_Request_Wrapper__c</referenceTo>
    <relationshipName>Payment_Request_Mocks</relationshipName>
    <type>Lookup</type>
</CustomField>