force-app/main/default/objects/Payment_Request_Mock__c/fields/POP_Comments__c.field-meta.xml
<CustomField>
    <fullName>POP_Comments__c</fullName>
    <label>POP Comments</label>
    <type>TextArea</type>
</CustomField>