force-app/main/default/objects/Payment_Request_Mock__c/fields/PR_VP__c.field-meta.xml
<CustomField>
    <fullName>PR_VP__c</fullName>
    <formula>CreatedBy.VP_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR VP</label>
    <type>Text</type>
</CustomField>