force-app/main/default/objects/Payment_Request_Mock__c/fields/Sales_VP_in_PR__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP_in_PR__c</fullName>
    <formula>New_Sale_Approval_Mock__r.Sales_Head_VP__r.FirstName &amp;&quot; &quot;&amp; New_Sale_Approval_Mock__r.Sales_Head_VP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales VP in PR</label>
    <type>Text</type>
</CustomField>