force-app/main/default/objects/Payment_Request_Mock__c/fields/SBF_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>SBF_Upload_Date__c</fullName>
    <formula>New_Sale_Approval_Mock__r.SBF_Uploaded_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBF Upload Date</label>
    <type>Date</type>
</CustomField>