force-app/main/default/objects/Payment_Request_Mock__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Accounts Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
            </value>
            <value>
                <fullName>Pending for Sales Ops Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales Ops</fullName>
            </value>
            <value>
                <fullName>Resubmitted to SM/SD</fullName>
            </value>
            <value>
                <fullName>Approved by Sales Ops</fullName>
            </value>
            <value>
                <fullName>Submitted to Accounts for Amount Confirmation</fullName>
            </value>
            <value>
                <fullName>Amount Confirmed by Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by System</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Payment Link sent to Customer</fullName>
            </value>
            <value>
                <fullName>Partially Approved</fullName>
            </value>
            <value>
                <fullName>PR was Approved- Booking is cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>