force-app/main/default/objects/Payment_Request_Mock__c/fields/Submitted_Date_for_Accounts_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_for_Accounts_Approval__c</fullName>
    <label>Submitted Date for Accounts Approval</label>
    <type>DateTime</type>
</CustomField>