force-app/main/default/objects/Payment_Request_Mock__c/fields/Submitted_to_Accounts_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Accounts_Date__c</fullName>
    <label>Submitted to Accounts Date</label>
    <type>DateTime</type>
</CustomField>