force-app/main/default/objects/Payment_Request_Mock__c/fields/Submitter_Manager_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Manager_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter Manager&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Requests14</relationshipName>
    <type>Lookup</type>
</CustomField>