force-app/main/default/objects/Payment_Request_Mock__c/fields/Towards_Other_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Towards_Other_Charges_Amount__c</fullName>
    <label>Towards Other Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>