force-app/main/default/objects/Payment_Request_Mock__c/fields/Unit_Blocking_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Unit_Blocking_Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Blocking Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipName>Payment_Requests13</relationshipName>
    <type>Lookup</type>
</CustomField>