force-app/main/default/objects/Payment_Request_Mock__c/fields/X1_Third_party__c.field-meta.xml
<CustomField>
    <fullName>X1_Third_party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third party?</label>
    <type>Checkbox</type>
</CustomField>