force-app/main/default/objects/Payment_Request_Mock__c/fields/X3rd_Party_DWT__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_DWT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party DWT</label>
    <type>Checkbox</type>
</CustomField>