force-app/main/default/objects/Payment_Request_Mock__c/fields/X3rdParty_cheque__c.field-meta.xml
<CustomField>
    <fullName>X3rdParty_cheque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rdParty cheque</label>
    <type>Checkbox</type>
</CustomField>