force-app/main/default/objects/Payment_Request_Mock__c/listViews/All_payment_requests_for_Treasury_team.listView-meta.xml
<ListView>
    <fullName>All_payment_requests_for_Treasury_team</fullName>
    <columns>NAME</columns>
    <columns>Amount_Towards__c</columns>
    <columns>Approved_Date_and_Time__c</columns>
    <columns>Mode__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Account_Master__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved by Accounts,Submitted to Accounts for Amount Confirmation,Amount Confirmed by Accounts,Approved,Partially Approved</value>
    </filters>
    <label>All payment requests for Treasury team</label>
    <sharedTo>
        <group>Treasury_Group</group>
    </sharedTo>
</ListView>