force-app/main/default/objects/Payment_Request_Mock__c/listViews/All_Website_PRs.listView-meta.xml
<ListView>
    <fullName>All_Website_PRs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Unit__c</columns>
    <columns>Booking__c</columns>
    <columns>Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Mode_Option__c</columns>
    <columns>Mode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode__c</field>
        <operation>equals</operation>
        <value>Website</value>
    </filters>
    <label>All Website PRs</label>
    <sharedTo>
        <role>Finance</role>
    </sharedTo>
</ListView>