force-app/main/default/objects/Payment_Request_Mock__c/listViews/Approved_PRs.listView-meta.xml
<ListView>
    <fullName>Approved_PRs</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Unit__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Mode__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Approved PRs</label>
    <sharedTo>
        <role>Collection</role>
    </sharedTo>
</ListView>