force-app/main/default/objects/Payment_Request_Mock__c/listViews/Collection_Payment_Requests.listView-meta.xml
<ListView>
    <fullName>Collection_Payment_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Booking__c</columns>
    <columns>Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Towards_Pre_Registration_Amount__c</columns>
    <columns>Towards_Unit_Price_Amount__c</columns>
    <columns>Instrument_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Mode__c</columns>
    <columns>Tower_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Collection Payment Requests</label>
    <sharedTo>
        <role>Collection</role>
    </sharedTo>
</ListView>